k8s/casa/apps/myownradio/unused/myownradio-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myownradio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: myownradio-server
  template:
    metadata:
      labels:
        deployment: myownradio-server
    spec:
      volumes:
        - name: myownradio-server-storage
          persistentVolumeClaim:
            claimName: myownradio-server-storage
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "php-fpm"
            - "backend-php-fpm"
      containers:
        - name: php-fpm
          image: pldin601/myownradio-backend-php:24.10.11540254408-d3a1708
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: "/app/storage"
              name: myownradio-server-storage
        - name: nginx
          image: pldin601/myownradio-backend-nginx:24.10.11540254395-d3a1708
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "350m"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerconfig
