k8s/casa/apps/myownradio/unused/myownradio-streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myownradio-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: myownradio-streamer
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        deployment: myownradio-streamer
    spec:
      containers:
        - name: streamer
          image: pldin601/myownradio-radio-streamer:24.10.11519774249-967697d
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "kill -SIGUSR1 1"]
      imagePullSecrets:
        - name: dockerconfig
      terminationGracePeriodSeconds: 7200
