k8s/casa/apps/myownradio/unused/radio-manager-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radio-manager-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: radio-manager-backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        deployment: radio-manager-backend
    spec:
      volumes:
        - name: myownradio-server-storage
          persistentVolumeClaim:
            claimName: myownradio-server-storage
      containers:
        - name: streamer
          image: pldin601/myownradio-radio-manager-backend:25.05.14779178329-25e213b
          resources:
            requests:
              memory: "512Mi"
              cpu: "190m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/app/storage"
              name: myownradio-server-storage
      imagePullSecrets:
        - name: dockerconfig
