k8s/casa/apps/myownradio/unused/myownradio-server-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-server
spec:
  selector:
    deployment: myownradio-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
