k8s/casa/apps/myownradio/unused/myownradio-streamer-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-streamer
spec:
  selector:
    deployment: myownradio-streamer
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
