k8s/casa/apps/myownradio/unused/redis-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: myownradio-redis
spec:
  selector:
    deployment: myownradio-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
