k8s/casa/apps/myownradio/unused/web-egress-controller.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radiomanager-web-egress-controller
spec:
  selector:
    deployment: radiomanager-web-egress-controller
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: web-egress-process-prepuller
  namespace: radioterio-egress
spec:
  selector:
    matchLabels:
      name: web-egress-process-prepuller
  template:
    metadata:
      labels:
        name: web-egress-process-prepuller
    spec:
      containers:
        - name: pause
          image: gcr.io/google_containers/pause
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radiomanager-web-egress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: radiomanager-web-egress-controller
  template:
    metadata:
      labels:
        deployment: radiomanager-web-egress-controller
    spec:
      serviceAccountName: radiomanager-web-egress-controller
      containers:
        - name: radiomanager-web-egress-controller
          image: pldin601/myownradio-radiomanager-web-egress-controller
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
