k8s/casa/apps/myownradio/unused/myownradio-server-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myownradio-server
  namespace: myownradio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
#      match: Host(`radioter.io`) && PathPrefix(`/`)
      match: Host(`radioter.io`) && (PathPrefix(`/api/`) || PathPrefix(`/content/`) || PathPrefix(`/flow`))
      services:
        - kind: Service
          name: myownradio-server
          port: http
          scheme: http
  tls:
    certResolver: default
